tests/negative/semantics/redefine_var.stream
// EXPECT: Error
let x = 10;
let x = 20; // Should fail